# rag-chatbot

./: .gitignore  CLAUDE.md  README.md  check.sh  fix.sh  format.sh  frontend-changes.md  lint.sh  pyproject.toml
backend/: ai_generator.py  app.py  config.py  document_processor.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: README.md  conftest.py  test_ai_generator.py  test_api.py
frontend/: index.html  script.js  style.css
